@@ -12,17 +12,23 @@
         <property name="visible">True</property>
         <property name="spacing">5</property>
         <child>
-          <placeholder/>
-        </child>
-        <child>
-          <widget class="GtkTable" id="clue_container">
+          <widget class="GtkHBox" id="clue_container">
             <property name="visible">True</property>
-            <property name="n_rows">1</property>
-            <property name="n_columns">3</property>
-            <property name="column_spacing">7</property>
-            <property name="row_spacing">6</property>
+            <property name="spacing">6</property>
             <child>
-              <placeholder/>
+              <widget class="GtkScrolledWindow" id="scrolledwindow1">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                <child>
+                  <widget class="GtkTreeView" id="clue_treeview">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="border_width">1</property>
+                  </widget>
+                </child>
+              </widget>
             </child>
             <child>
               <widget class="GtkVButtonBox" id="vbuttonbox2">
@@ -67,38 +73,11 @@
                 </child>
               </widget>
               <packing>
-                <property name="left_attach">2</property>
-                <property name="right_attach">3</property>
-                <property name="x_options"></property>
-                <property name="y_options"></property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkScrolledWindow" id="scrolledwindow1">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <child>
-                  <widget class="GtkTreeView" id="clue_treeview">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="border_width">1</property>
-                  </widget>
-                </child>
-              </widget>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-                <property name="y_options">GTK_FILL</property>
+                <property name="expand">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">1</property>
-          </packing>
         </child>
       </widget>
     </child>
