@@ -1,3 +1,10 @@
+2008-05-23  Johnny Jacob  <jjohnny@novell.com>
+
+	** Fixes Bug 496476.
+	
+	* plugin-manager.c (org_gnome_plugin_manager_manage): Let the 
+	plugin configure widget expand.
+
 2008-03-20  Sankar P  <psankar@novell.com>
 
 	* org-gnome-plugin-manager.eplug.xml:
