@@ -1,3 +1,12 @@
+2008-05-23  Johnny Jacob  <jjohnny@novell.com>
+
+	** Fixes Bug 496476.
+	
+	* attachment-reminder.glade: Removed GtkTables and added simple HBoxes
+	
+	* attachment-reminder.c (e_plugin_lib_get_configure_widget): Let the
+	configure widget expand.
+
 2008-05-22  Johnny Jacob  <jjohnny@novell.com>
 	
 	** Fixes Bug #529995
